# fundies-2

./: .gitmodules  README.md  discography.py  main.py  push.sh  pyproject.toml  strategy.py  wordle.py  words.txt
ae2/: Fundamentals of CS II AE2.md  Report.docx  classes.dot  main.py  pyproject.toml  requests_template.py  test_webtirs_client.py  webtris_client.py  ~$Report.docx
ae2-3/: main.py  pyproject.toml  test_webtris_graph.py  webtris_client.py  webtris_graph.py
ae2-3/ae2-report/: requests_template.py  res.json
ae2-3/ae2-report/.obsidian/: workspace.json
ae2-3/ae3-report/: Fundamentals of CS II AE3.md  classes.dot  packages_webtris_graph.dot
ae2-3/ae3-report/.obsidian/: workspace.json
ae2/.obsidian/: hotkeys.json  workspace.json
labs/week-2/: exercise_1.py  exercise_2.py  exercise_3.py  exercise_4.py  exercise_5.py
labs/week-3/: trainer.py
playground/: main.py  pyproject.toml
playground/in-class/: template.py  week-2-1.py  week-2-2.py  week-6-2.py  week-7-1.py  week-7-2.py
playground/testtest/: pyproject.toml
playground/testtest/src/testtest/: __init__.py  tester.py
playground/testtest/tests/: test_tester.py
spring-2025-2026-diltondev/labs/week-4/: test_zelda.py  zelda.py
spring-2025-26-diltondev/: main.py  push.sh  pyproject.toml
spring-2025-26-diltondev/labs/week-10/: week-10-lab.ipynb
spring-2025-26-diltondev/labs/week-2/: exercise_1.py  exercise_3.py  exercise_5.py
spring-2025-26-diltondev/labs/week-3/: pokemon.py  test_pokemon.py
spring-2025-26-diltondev/labs/week-4/: README.md  test_zelda.py  zelda.py
(+15 files in other folders)
